// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots matches active snapshot 1`] = `
<Button
  active={true}
  clickAction={[Function]}
  disabled={false}
  label="Button"
  orientation="horizontal"
  size="normal"
/>
`;

exports[`Button Snapshots matches disabled snapshot 1`] = `
<Button
  active={false}
  clickAction={[Function]}
  disabled={true}
  label="Button"
  orientation="horizontal"
  size="normal"
/>
`;

exports[`Button Snapshots matches orientation snapshots 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #fff;
  color: #000;
  border-color: transparent;
  font-size: 14px;
  border-radius: 4px;
  padding: 2px 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 4px;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-top: 0.25px;
}

<button
  class="c0"
  orientation="vertical"
  title="vertical"
>
  <span>
    vertical
  </span>
</button>
`;

exports[`Button Snapshots matches orientation snapshots 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #fff;
  color: #000;
  border-color: transparent;
  font-size: 14px;
  border-radius: 4px;
  padding: 2px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="horizontal"
>
  <span>
    horizontal
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #fff;
  color: #000;
  border-color: #e6e6e6;
  font-size: 14px;
  border-radius: 4px;
  padding: 2px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="outline"
>
  <span>
    outline
  </span>
</button>
`;

exports[`Button Snapshots matches prefix/suffix snapshot 1`] = `
<Button
  active={false}
  clickAction={[Function]}
  disabled={false}
  label="Button"
  orientation="horizontal"
  prefix="Prefix"
  size="normal"
  suffix="Suffix"
/>
`;

exports[`Button Snapshots matches size snapshots 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #fff;
  color: #000;
  border-color: transparent;
  font-size: 14px;
  border-radius: 4px;
  padding: 2px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="normal"
>
  <span>
    normal
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #fff;
  color: #000;
  border-color: transparent;
  font-size: 9px;
  border-radius: 4px;
  padding: 2px 8px;
  text-transform: uppercase;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="xs"
>
  <span>
    xs
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 3`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #fff;
  color: #000;
  border-color: transparent;
  font-size: 11px;
  border-radius: 4px;
  padding: 2px 8px;
  text-transform: uppercase;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="sm"
>
  <span>
    sm
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 4`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #fff;
  color: #000;
  border-color: transparent;
  font-size: 18px;
  border-radius: 4px;
  padding: 2px 10px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="lg"
>
  <span>
    lg
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 5`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #fff;
  color: #000;
  border-color: transparent;
  font-size: 18px;
  border-radius: 4px;
  padding: 2px 10px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="xl"
>
  <span>
    xl
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #D83D22;
  color: #fff;
  border-color: transparent;
  font-size: 14px;
  border-radius: 4px;
  padding: 2px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="danger"
  type="danger"
>
  <span>
    danger
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #1E6DF6;
  color: #fff;
  border-color: transparent;
  font-size: 14px;
  border-radius: 4px;
  padding: 2px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="info"
  type="info"
>
  <span>
    info
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 3`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #0aab2a;
  color: #fff;
  border-color: transparent;
  font-size: 14px;
  border-radius: 4px;
  padding: 2px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="primary"
  type="primary"
>
  <span>
    primary
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 4`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.4;
  text-align: center;
  text-transform: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  position: relative;
  background-color: #F7CD45;
  color: #fff;
  border-color: transparent;
  font-size: 14px;
  border-radius: 4px;
  padding: 2px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:hover:focus,
.c0:hover:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0:focus,
.c0:focus:active {
  outline: none;
  border: 1px solid #0aab2a;
  box-shadow: 0 0 0 2.5px rgba(10,171,42,0.5),inset 0 0 0 1px rgba(255,255,255,0.15);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:hover {
  -webkit-filter: saturate(120%) brightness(95%);
  filter: saturate(120%) brightness(95%);
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  -webkit-filter: saturate(80%) brightness(90%) contrast(110%);
  filter: saturate(80%) brightness(90%) contrast(110%);
}

.c0:focus {
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: not-allowed;
  -webkit-filter: saturate(0) opacity(70%);
  filter: saturate(0) opacity(70%);
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="warning"
  type="warning"
>
  <span>
    warning
  </span>
</button>
`;
